# video-player

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: main.c
vulkan_ffmpeg/: mian.c
